tests/baselines/reference/es6ExportClause.errors.txt
tests/cases/compiler/es6ExportClause.ts(12,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/es6ExportClause.ts (1 errors) ====
    
    class c {
    }
    interface i {
    }
    module m {
        export var x = 10;
    }
    var x = 10;
    module uninstantiated {
    }
    export { c };
    ~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    export { c as c2 };
    export { i, m as instantiatedModule };
    export { uninstantiated };
    export { x };